# armadillo

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  main.py  routes.py  setup.py  utilities.py
scripts/: run.sh
tests/: conftest.py
