[tool.poetry]
name = "armadillo"
version = "0.1.0"
description = "Providing download links for GitHub subdirectories"
authors = ["Moritz Makowski <moritz@dostuffthatmatters.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
autopep8 = "^1.5.4"
python-dotenv = "^0.14.0"
fastapi = "^0.61.1"
requests = "^2.24.0"
motor = "^2.3.0"
dnspython = "^2.0.0"
httpx = {extras = ["http2"], version = "^0.16.1"}
uvicorn = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 80
ignore = "E501,W6"
