[tool.poetry]
name = "armadillo"
version = "0.1.0"
description = "Providing download links for GitHub subdirectories"
authors = ["Moritz Makowski <moritz@dostuffthatmatters.dev>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
motor = "^2.3.0"
httpx = "^0.16.1"
uvicorn = {extras = ["standard"], version = "^0.12.1"}
dnspython = "^2.0.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 80
ignore = "E501,W6"
